# job-apply-extension

./: .gitignore  INTEGRATED-BROWSER-IMPLEMENTATION.md  README.md  ROADMAP.md  build_all.sh
backend/: .env.example  build.bat  build.sh  build.spec  requirements.txt  run.py  run.sh  verify_model.py
backend/app/: config.py  database.py  main.py
desktop/: .gitignore  PHASE5-BUILD.md  README.md  package-lock.json  package.json
desktop/scripts/: bundle-automation.sh  bundle-resources.bat  bundle-resources.sh
desktop/src/: automation.css  automation.html  automation.js  index.html  onboarding.css  onboarding.html  onboarding.js  registry.js  shell.css  shell.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: browser-pane.json  default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: browser-backend.toml  integrated-browser.toml
desktop/src-tauri/resources/automation/: ashby.js  autofill.js  generic.js  generic_apply.js  greenhouse.js  jaa_bridge.js  linkedin.js  linkedin_easyapply.js
desktop/src-tauri/src/: backend.rs  browser.rs  commands.rs  lib.rs  main.rs  ollama.rs
extension/: manifest.json
extension/background/: service_worker.js
extension/content/: apply_watcher.js  ashby.js  autofill.js  generic.js  generic_apply.js  greenhouse.js  lever.js  linkedin.js  linkedin_easyapply.js  overlay.css  question_suggest.js  successfactors.js
extension/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.js
website/: app.js  index.html  integrated.js  registry.js  style.css
(+34 files in other folders)
